bpo-40686: Fix compiler warnings in _zoneinfo.c